  - #3971, ST_ClusterKMeans now uses better initial seed (Darafei Praliaskouski)
  - #3977, ST_ClusterKMeans is now faster and simpler (Darafei Praliaskouski)
  - #3982, ST_AsEncodedPolyline supports LINESTRING EMPTY and MULTIPOINT EMPTY
           (Darafei Praliaskouski)
  - #3986, ST_AsText now has second argument to limit decimal digits 
           (Marc Ducobu, Darafei Praliaskouski)

PostGIS 2.4.0
2017/09/30

 * New Features *
  - #3822, Have postgis_full_version() also show and check version of
           PostgreSQL the scripts were built against (Sandro Santilli)
  - #2411, curves support in ST_Reverse (Sandro Santilli)
  - #2951, ST_Centroid for geography (Danny Götte)
  - #3788, Allow postgis_restore.pl to work on directory-style (-Fd) dumps
           (Roger Crew)
  - #3772, Direction agnostic ST_CurveToLine output (Sandro Santilli / KKGeo)
  - #2464, ST_CurveToLine with MaxError tolerance (Sandro Santilli / KKGeo)
  - #3599, Geobuf output support via ST_AsGeobuf (Björn Harrtell)
  - #3661, Mapbox vector tile output support via ST_AsMVT (Björn Harrtell / CartoDB)
  - #3689, Add orientation checking and forcing functions (Dan Baston)
  - #3753, Gist penalty speed improvements for 2D and ND points
           (Darafei Praliaskouski, Andrey Borodin)
  - #3677, ST_FrechetDistance (Shinichi Sugiyama)
  - Most aggregates (raster and geometry),
    and all stable / immutable (raster and geometry) marked as parallel safe
  - #2249, ST_MakeEmptyCoverage for raster (David Zwarg, ainomieli)
  - #3709, Allow signed distance for ST_Project (Darafei Praliaskouski)
  - #524, Covers support for polygon on polygon, line on line,
          point on line for geography (Danny Götte)

* Enhancements and Fixes*
  - Many corrections to docs and several translations almost complete.
    Andreas Schild who provided many corrections to core docs.
    PostGIS Japanese translation team first to reach completion of translation.

  - Support for PostgreSQL 10