@@ -39,6 +39,8 @@ PostGIS 2.5.0
            (Darafei Praliaskouski)
   - #3986, ST_AsText now has second argument to limit decimal digits 
            (Marc Ducobu, Darafei Praliaskouski)
+  - #4020, Casting from box3d to geometry now returns correctly connected
+           PolyhedralSurface (Matthias Bay)
 
 PostGIS 2.4.0
 2017/09/30
